--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header id="header-section">
-        <form action="">
-            <input type="text" id="todo-input">
+        <form>
+            <input type="text" id="todo-input" required >
             <button id="add-todo-btn" >add todo</button>
         </form>
     </header>
