--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 id="heading">TODO TASK LIST</h1>
     <header id="header-section">
         <form>
-            <input type="text" id="todo-input" required >
+            <input type="text" id="todo-input" placeholder="What are you planning?"required >
             <button id="add-todo-btn" >add todo</button>
         </form>
     </header>
