--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/general.css">
     <script src="/scripts/main.js" defer></script>
-    <title>Document</title>
+    <title>My 2022 Todo Task List</title>
 </head>
 <body>
     <h1 id="heading">TODO TASK LIST</h1>
